2001-05-20  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
  
        * baseboards/m68hc11-sim.exp: New file for 68HC11/68HC12 validation.
        * config/m68hc11.exp: New file.

2001-05-16  Rob Savoye  <rob@peggyo.welcomehome.org>

	* lib/target.exp: Reverse when add_flags gets set, so it actually
	links with the libraries being tested. From J. David Anglin
	<dave@hiauly1.hia.nrc.ca>.

2001-05-14  Rob Savoye  <rob@peggyo.welcomehome.org>

	* runtest.exp: Conditionally set the exit_status so we don't stomp
	on FAIL. Rearrange --status so it works correctly with --strace.

2001-05-13  Rob Savoye  <rob@peggyo.welcomehome.org>

	* lib/target.exp: Fix the regsub line where it prunes -fPIC
	warnings so the text variable is on the same line.

2001-05-09  Rob Savoye  <rob@peggyo.welcomehome.org>

	* runtest.exp: Add new command line option, --status (or -sta) to
	toggle whether Tcl script bugs in test drivers should be
	propogated as an error to the shell.

2001-05-08  Rob Savoye  <rob@peggyo.welcomehome.org>

	* lib/dejagnu.exp: Trim off test state part of the message, so we
	don't duplicate it.
	* runtest.exp: Set the exit status when their are Tcl script bugs,
	so make notices the errors. (contributed by Martin Muenstermann
	<muenstermann@trustcenter.de>)

2001-05-06  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* debian/rules: Install all the doc formats.
	* redhat/dejagnu.spec: Install all the doc formats.
	* Clean.tcl: Also nuke all Emacs backup files.
	* Makefile.am: Fix dependencies on tarball target. Add new target
	to build Debian packages. Add $(includedir) to install-data-local
	target so dejagnu.h gets installed in the right place.

2001-05-03  Rob Savoye  <rob@peggyo.welcomehome.org>

	* doc/Makefile.am: Make all paths absolute, cause some versions of
	the db2* tools are braindead.
	* doc/overview.sgml: Update version numbers and log.
	* doc/user.sgml: Add mention of dejagnu.h header file.
	* doc/ref.sgml: Add chapter on dejagnu.h header file for unit